# rnaseq

./: .gitignore  COMMIT_MESSAGE.txt  COMPLETE_PIPELINE_DESCRIPTION_FOR_POSTER.md  PIPELINE_FLOWCHART.md  PYDESEQ2_INTEGRATION.md  README.md  TRINITY_PERFORMANCE_DIFFERENCES.md  TRINITY_TROUBLESHOOTING.md  TRINITY_VERSION_COMPARISON.md  TRINITY_VERSION_OUTPUT_LOCATIONS.md  bldstridx_error.txt  bldstridx_output.txt  build_count_matrix.py  cyp_heatmap.py  environment.yml  extract_cyp_families.py  fix_trinity_paths.sh  pydeseq2_analysis.py  pydeseq2_countmatrix.py  pydeseq2_filter_results.py  pydeseq2_generate_plots.py  pydeseq2_run_analysis.py  pyproject.toml  rna_pipeline_172630.err  rna_pipeline_172632.err  rnaseq_analysis.R  run_rnaseq_analysis.sh
ReadME/: BEGINNER_GUIDE.md  CYP_HEATMAP_PIPELINE.md  PIPELINE_FLOWCHART.md  README_CountMatrix.md
archive/: FINAL_WORKFLOW.md  WORKFLOW.txt  build_count_matrix_old.py  compare_count_matrices.py  fetch_proteins_edirect.py  learn_pydeseq2.ipynb  pydeseq2_basic.py  pydeseq2_countmatrix.py  rna_pipeline_tools_build_count_matrix.py  rna_pipeline_tools_fastp.py  run_pydeseq2_countmatrix.sbatch
docs/: CONCEPTS.md  DIRECTORY_STRUCTURE.md  HMMER_PROSITE_GUIDE.md  PIPELINE_WORKFLOW.md  README_trinity.md  SETUP.md
rna_pipeline/: __init__.py  cli.py  logging_setup.py  main.py
scripts/: FINAL_WORKFLOW.md  blast_input.sbatch  blastp_discoveryfilter.sbatch  blastp_strictfilter.sbatch  blastx_discoveryfilter.sbatch  blastx_strictfilter.sbatch  build_count_matrix.sbatch  combine_blast_deseq.py  compare_species.py  config.sh  run.sbatch  (+66 more)
(+109 files in other folders)
